--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
     Nro de Questões: <input type="number" value="1" name="nro_questao"> <br>
     {% for tag in vetTag %}
         <input name="tags" type="checkbox" value="{{tag[0]}}"> {{tag[1]}} <a href="/remover_tag/{{tag[0]}}">Remover</a>
+        <a href="/tela_alterar_tag/{{tag[0]}}">Alterar</a>
         <br>
     {% endfor %}    
     <input type="submit" value="Gerar">
