--- a/templates/tela_adicionar_questao.html
+++ b/templates/tela_adicionar_questao.html
@@ -1,4 +1,19 @@
-<form method="post" action="/adicionar_questao">    
-    Questão: <input name="questao">
-    <input type="submit" value="Adicionar">
-</form>
+<html>
+    <head>
+        		
+		<script src="/static/jquery.js"></script>
+		<script src="/static/bootstrap/js/bootstrap.min.js"></script>
+
+        <script type="text/javascript" src="/static/nicedit/nicEdit-latest.js"></script>
+		<script type="text/javascript">			
+			bkLib.onDomLoaded(function () { nicEditors.allTextAreas({fullPanel : true})});
+		</script>
+</head>
+<body>
+    <form method="post" action="/adicionar_questao">    
+        Questão: 
+        <textarea name="questao" rows="10" cols="50"> </textarea> 
+        <input type="submit" value="Adicionar">        
+    </form>
+</body>
+</html>
