--- a/templates/tela_alterar_questao.html
+++ b/templates/tela_alterar_questao.html
@@ -1,5 +1,13 @@
+
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    </head>
+<body>
 <form method="post" action="/alterar_questao">    
     Questão: <input name="questao" value="{{questao[1]}}">
     <input type="hidden" name="id" value="{{questao[0]}}">
     <input type="submit" value="Alterar">
 </form>
+</body> </html>
