--- a/templates/prova.html
+++ b/templates/prova.html
@@ -1,4 +1,11 @@
-
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    </head>
+<body>
 {% for questao in vetQuestao %}
     {{questao[1]|safe}} <br>
 {% endfor %}
+</body>
+</html>
