--- a/templates/tela_adicionar_tag.html
+++ b/templates/tela_adicionar_tag.html
@@ -1,4 +1,11 @@
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    </head>
+<body>
 <form method="post" action="/adicionar_tag">    
     Questão: <input name="tag">
     <input type="submit" value="Adicionar">
 </form>
+</body></html>
