--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <input type="submit" value="Gerar">
 </form>
 
-<a href="/listar_questao">Questões</a>
+<a href="/listar_questao">Questões</a> <br>
 
 <a href="/tela_adicionar_questao">Adicionar Questão</a>
 </body> </html>
