--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,9 @@
     <input type="submit" value="Gerar">
 </form>
 
+<a href="/tela_adicionar_tag">Adicionar Tag</a> <br>
+
 <a href="/listar_questao">Questões</a> <br>
 
-<a href="/tela_adicionar_questao">Adicionar Questão</a>
+<!-- <a href="/tela_adicionar_questao">Adicionar Questão</a> -->
 </body> </html>
