--- a/templates/tela_adicionar_tag.html
+++ b/templates/tela_adicionar_tag.html
@@ -5,7 +5,7 @@
     </head>
 <body>
 <form method="post" action="/adicionar_tag">    
-    Questão: <input name="tag">
+    Tag: <input name="tag">
     <input type="submit" value="Adicionar">
 </form>
 </body></html>
